# .claude

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  config.yml  docker-compose.yml  pyproject.toml  settings.json
agents/: _template.md  agent-builder-skill.md  agent-builder.md  browser-automation-agent.md  browser-automation.md  claude-agent-creator.md  claude-skill-creator.md  cloud-auth-agent.md  cloud-auth.md  gitops.md  gomplate-manager.md  health-check.md  hello-world.md  project-analysis.md  project-disovery-agent.md  rule-builder.md  skill-builder.md  stack-manager.md  taskfile-manager.md
aws/: __init__.py  account_discovery.py  aws_config_helper.py  config_reader.py  logging_config.py  org_sync.py  sso_check.py  sso_ensure.py  sso_login.py
commands/: analyze.md  auth-aws.md  auth-gcp.md  build-agent.md  build-rule.md  build-skill.md  cloud-auth.md  context.md  gitops.md  gomplate.md  health.md  hello.md  metadata.md  playwright.md  stack-manager.md  taskfile.md
config/: gomplate.yaml  pricing.yml
directives/: 000-directives.md  010-start.md  020-persona.md  030-agents.md  040-plans.md  050-python.md  060-context7.md  070-backward-compat.md  080-ask-user-questions.md
docker/: Dockerfile  docker-entrypoint.ps1  docker-entrypoint.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  ROADMAP.md  SETUP.md  TROUBLESHOOTING.md
hooks/changelog_monitor/: pyproject.toml
hooks/changelog_monitor/src/: __init__.py  __main__.py  analyzer.py  fetcher.py  parser.py
hooks/cloud_auth_prompt/: pyproject.toml
hooks/cloud_auth_prompt/src/: __init__.py  __main__.py  config_reader.py  formatter.py
hooks/directive_loader/: README.md  config.json  pyproject.toml
hooks/directive_loader/src/: __main__.py  cli.py  formatter.py  loader.py  logger.py  paths.py
hooks/logger/: README.md  config.json  pyproject.toml
hooks/logger/src/: __main__.py  cli.py  paths.py  reader.py  writer.py
hooks/logger/tests/: __init__.py  conftest.py  test_writer.py
hooks/plan_distributor/: pyproject.toml
hooks/plan_distributor/src/: __init__.py  __main__.py  distributor.py  parser.py
hooks/playwright_healer/: config.json  pyproject.toml
hooks/playwright_healer/src/: __init__.py  __main__.py  cli.py  logger.py  paths.py  schemas.py
hooks/rules_loader/: .coverage  README.md  config.json  pyproject.toml
hooks/rules_loader/src/: __init__.py  __main__.py  cli.py  loader.py  logger.py  paths.py  schemas.py
hooks/rules_loader/tests/: __init__.py  conftest.py
hooks/rules_loader/tests/fixtures/: __init__.py
hooks/rules_loader/tests/fixtures/sample_rules/: 000-test-rule.md  010-another-rule.md  020-third-rule.md
hooks/rules_loader/tests/integration/: __init__.py  test_main_flow.py
hooks/rules_loader/tests/unit/: __init__.py  test_formatter.py  test_loader.py  test_reader.py
hooks/session_context_injector/: pyproject.toml
hooks/session_context_injector/src/: __init__.py  __main__.py  config.py
hooks/submodule_auto_updater/: pyproject.toml
hooks/submodule_auto_updater/src/: __init__.py  __main__.py  config.py  state_manager.py  updater.py
includes/: Taskfile.yml
lib/: pyproject.toml
lib/aws_inspector/: pyproject.toml
lib/aws_inspector/aws_inspector/: __init__.py
lib/aws_inspector/aws_inspector/core/: __init__.py  session.py
lib/aws_inspector/aws_inspector/inventory/: __init__.py  reader.py  writer.py
lib/aws_inspector/aws_inspector/services/: __init__.py  ec2.py  organizations.py  s3.py  ses.py  sns.py  sqs.py
lib/aws_utils/: __init__.py
lib/aws_utils/core/: __init__.py  schemas.py  session.py
lib/aws_utils/inventory/: __init__.py  reader.py  writer.py
lib/aws_utils/services/: __init__.py  acm.py  api_gateway.py  autoscaling.py  cloudfront.py  cloudwatch.py  codebuild.py  codepipeline.py  cognito.py  dynamodb.py  ec2.py  ecr.py  ecs.py  eks.py  elb.py  elbv2.py  iam.py  lambda_svc.py  organizations.py  rds.py  route53.py  s3.py  secrets_manager.py  ses.py  sns.py  sqs.py  sso.py  stepfunctions.py
lib/config_helper/: __init__.py  config.py  logging.py  yaml_utils.py
lib/tests/: __init__.py  conftest.py
lib/tests/test_aws_utils/: __init__.py  test_ecs_eks_acm.py  test_new_services.py  test_schemas.py  test_session.py
lib/tests/test_config_helper/: __init__.py  test_config.py  test_logging.py  test_paths.py  test_yaml_utils.py
plans/: 20251211_164538_project-metadata-builder-skill.md  20251211_173459_directive-040-submodule-plans.md  20251212_190345_video-recorder-dual-format-output.md  20251212_213632_git-manager-identity-autodetection.md  20251213_000625_smart-submodule-update.md  20251213_012929_migrate-directives-to-rules.md  20251213_015802_add-debug-parameter.md  20251213_213612_electron-react-stack.md  20251218_234442_workspace-improvements.md  20251219_002948_phase3-remaining-improvements.md
prompts/: README.md
rules/: 000-rule-follower.md  010-session-starter.md  010-start.md  020-persona.md  (+8 more)
scripts/taskfile-validator/: pyproject.toml
scripts/taskfile-validator/src/: __init__.py  parser.py  rules.py
skills/aws-login/: SKILL.md  pyproject.toml
skills/aws-login/lib/: __init__.py  __main__.py  config.py  discovery.py  profiles.py  sso.py  sso_discovery.py
skills/aws-login/scripts/: __init__.py
skills/aws-login/scripts/cli/: org_sync.py  sso_check.py  sso_login.py
skills/aws-login/scripts/config/: setup_wizard.py
skills/aws-login/scripts/core/: __init__.py  aws_cli.py  config_reader.py  logging_config.py
skills/aws-login/scripts/discovery/: __init__.py
skills/gcp-login/: SKILL.md  pyproject.toml
skills/gcp-login/lib/: __init__.py  __main__.py  auth.py
skills/gcp-login/scripts/: __init__.py  auth.py  bucket_policy.py
skills/git-manager/: SKILL.md  pyproject.toml
skills/git-manager/scripts/: __init__.py  __main__.py  auth.py  identity.py  message.py  plan.py  pricing.py  stats.py
skills/session-context/: SKILL.md  pyproject.toml
skills/session-context/src/: __init__.py  config.py
skills/session-context/src/collectors/: __init__.py  git_context.py
(+292 files in other folders)
