[project]
name = "changelog-monitor"
version = "0.1.0"
description = "Monitor Claude Code changelog for new features and update roadmap"
requires-python = ">=3.12"
dependencies = ["structlog>=24.0.0", "pyyaml>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
