[project]
name = "cloud-auth-prompt"
version = "0.1.0"
description = "SessionStart hook to prompt for cloud provider authentication"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "structlog>=24.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
