[project]
name = "directive-loader"
version = "0.1.0"
description = "Load and combine markdown directives into JSON hook format"
requires-python = ">=3.12"
dependencies = ["structlog>=24.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
