[project]
name = "plan-distributor"
version = "1.0.0"
description = "PostToolUse hook to distribute plans to appropriate project directories"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
