[project]
name = "rules-loader"
version = "0.2.0"
description = "Load and filter rules for Claude Code hook reinforcement"
requires-python = ">=3.12"
dependencies = ["structlog>=24.0.0", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
