[project]
name = "rules-loader"
version = "0.2.0"
description = "Load and filter rules for Claude Code hook reinforcement"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.0.0", "pyyaml>=6.0", "structlog>=24.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
