[project]
name = "session-context-injector"
version = "0.1.0"
description = "Hook to inject session context and trigger project-analysis agent"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
