[project]
name = "submodule-auto-updater"
version = "0.1.0"
description = "Hook to auto-update .claude submodule from upstream and notify Claude"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
