[project]
name = "aws-login"
version = "0.1.0"
description = "AWS SSO authentication skill for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "InquirerPy>=0.3.4",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
