[project]
name = "aws-login"
version = "1.0.0"
description = "AWS SSO authentication skill for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "InquirerPy>=0.3.4",
    "rich>=13.0.0",
    "claude-lib",
]

[tool.uv.sources]
claude-lib = { path = "../../lib", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
