[project]
name = "gcp-login"
version = "0.2.0"
description = "GCP authentication skill for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.0.0",
    "claude-lib",
]

[tool.uv.sources]
claude-lib = { path = "../../lib", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
