[project]
name = "git-manager"
version = "0.1.0"
description = "Git workflow automation for Claude Code skill"
requires-python = ">=3.12"
dependencies = ["structlog>=24.0.0"]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
